# camel-code

./: .gitattributes  .gitignore  AUDIT_PROMPT.md  CLAUDE.md  LICENSE  README.md  camel.opam  demo.sh  dune-project
.devcontainer/: Dockerfile  devcontainer.json
.gitea/workflows/: build.yml
lib/: args.ml  bridge.ml  camel.ml  claude_md.ml  client.ml  commands.ml  config.ml  coordinator.ml  cost_tracker.ml  daemon.ml  doctor.ml  dune  feature_flags.ml  fff.ml  fff_stubs.c  hooks.ml  input.ml  keybindings.ml  markdown_render.ml  mcp_client.ml  mcp_manager.ml  mcp_types.ml  message.ml  oauth.ml  permissions.ml  query.ml  repl.ml  semantic_memory.ml  session.ml  settings.ml  skills.ml  streaming.ml  system_prompt.ml  task_manager.ml  tool_agent.ml  tool_ask_user.ml  tool_bash.ml  tool_edit.ml  tool_executor.ml  tool_glob.ml  (+19 more)
lib/fff_native/: dune  fff_bindings.ml  fff_native.ml  fff_native.mli  fff_stubs.c
prompts/: fff-integration-eval.md
scripts/: demo.sh  e2e.sh  workflow.sh
test/: bench_fff.ml  debug_fff.ml  dune  test_camel.ml
